# Codii

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: uv_pip_enforcer.py
docs/: schemas.md
scripts/: run_coir_benchmark.py
src/codii/: cli.py
src/codii/evaluation/: __init__.py  coir_adapter.py
src/codii/indexers/: hybrid_search.py  vector_indexer.py
src/codii/storage/: database.py
src/codii/tools/: index_codebase.py  search_code.py
src/codii/utils/: config.py
tests/: test_server.py
tests/test_benchmark/: __init__.py  test_coir.py
tests/test_cli/: __init__.py  test_build.py  test_clear.py  test_helpers.py  test_inspect.py  test_list.py  test_stats.py  test_status.py  test_version.py
tests/test_embedding/: __init__.py  test_embedder.py
tests/test_storage/: test_database.py
tests/test_tools/: test_index_codebase.py  test_search_code.py
tests/test_utils/: __init__.py  test_config.py  test_file_utils.py
